name:                 scoped-type-vars
version:              0.1.0.0
synopsis:             Simple, clean project template using MIT License by default
description:          Please see README.md
homepage:             https://github.com/seahug/scoped-type-vars#readme
license:              MIT
license-file:         LICENSE
author:               Richard Cook
maintainer:           rcook@rcook.org
copyright:            2016 Richard Cook
category:             Web
build-type:           Simple
cabal-version:        >= 1.10

source-repository head
  type:               git
  location:           https://github.com/seahug/scoped-type-vars.git

executable scoped-type-vars
  hs-source-dirs:     src
  main-is:            Main.lhs
  default-language:   Haskell2010
  build-depends:      base
                    , markdown-unlit
  ghc-options:        -pgmL markdown-unlit

test-suite doctests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  default-language:   Haskell2010
  build-depends:      Glob
                    , base >= 4.7 && < 5
                    , doctest
